--- a/WebFundamentals/Javascript/Contact Card.html
+++ b/WebFundamentals/Javascript/Contact Card.html
@@ -15,11 +15,12 @@
               First name:<input type="text" name="first"><br><br>
               Last name:<input type="text" name="last"><br><br>
         </form>
-        Description:<br>
+        <h4>Description:</h4><br>
         <textarea class="description" rows="6" cols="35">
           Enter Description:
         </textarea><br><br>
         <button type="button" class="button1">Add User</button>
       </div>
+      <div class=""
    </body>
 </html>
