Added Shapes CSS

--- a/WebFundamentals/Javascript/hover_in_out/hover.html
+++ b/WebFundamentals/Javascript/hover_in_out/hover.html
@@ -10,18 +10,39 @@
       <body>
             <div class="firstrow">
                   <img src="ninjafox.jpg" data-alt-src="">
+                  <!-- <img src="ninjafox.jpg" data-alt-src="">
                   <img src="ninjafox.jpg" data-alt-src="">
-                  <img src="ninjafox.jpg" data-alt-src="">
-                  <img src="ninjafox.jpg" data-alt-src="">
+                  <img src="ninjafox.jpg" data-alt-src=""> -->
             </div>
-            <div class="secondrow">
+            <!-- <div class="secondrow">
                   <img src="ninjafox.jpg" data-alt-src="">
                   <img src="ninjafox.jpg" data-alt-src="">
                   <img src="ninjafox.jpg" data-alt-src="">
                   <img src="ninjafox.jpg" data-alt-src="">
-            </div>
-            <div class="text">
+            </div> -->
+            <div class="square">
                   <p class="attack">Attack!</p>
             </div>
+            <!-- <div class="square">
+                  <p class="attack">I rolled 1d20+5</p>
+            </div>
+            <div class="square">
+                  <p class="attack">A nat 20! Roll to confirm!</p>
+            </div>
+            <div class="square">
+                  <p class="attack">Confirmed! Roll 2d8+16 points of damage!</p>
+            </div>
+            <div class="squad">
+                  <p class="attack">Monster Attacks!</p>
+            </div>
+            <div class="squad">
+                  <p class="attack">It rolls 1d20+5</p>
+            </div>
+            <div class="squad">
+                  <p class="attack">It rolls an 18! A hit!</p>
+            </div>
+            <div class="squad">
+                  <p class="attack">I take 1d10+4 points of damage!</p>
+            </div> -->
       </body>
 </html>
