Add JQuery files

--- a/WebFundamentals/Javascript/hover_in_out/hover.html
+++ b/WebFundamentals/Javascript/hover_in_out/hover.html
@@ -9,40 +9,40 @@
       </head>
       <body>
             <div class="firstrow">
-                  <img src="ninjafox.jpg" data-alt-src="">
-                  <!-- <img src="ninjafox.jpg" data-alt-src="">
-                  <img src="ninjafox.jpg" data-alt-src="">
-                  <img src="ninjafox.jpg" data-alt-src=""> -->
+                  <img class="img1" src="ninjafox.jpg" data-alt-src="">
+                  <img class="img2" src="ninjafox.jpg" data-alt-src="">
+                  <img class="img3" src="ninjafox.jpg" data-alt-src="">
+                  <img class="img4" src="ninjafox.jpg" data-alt-src="">
             </div>
-            <!-- <div class="secondrow">
-                  <img src="ninjafox.jpg" data-alt-src="">
-                  <img src="ninjafox.jpg" data-alt-src="">
-                  <img src="ninjafox.jpg" data-alt-src="">
-                  <img src="ninjafox.jpg" data-alt-src="">
-            </div> -->
-            <div class="square">
+            <div class="secondrow">
+                  <img class="img5"src="ninjafox.jpg" data-alt-src="">
+                  <img class="img6"src="ninjafox.jpg" data-alt-src="">
+                  <img class="img7"src="ninjafox.jpg" data-alt-src="">
+                  <img class="img8"src="ninjafox.jpg" data-alt-src="">
+            </div>
+            <div id ="square" class="square1">
                   <p class="attack">Attack!</p>
             </div>
-            <!-- <div class="square">
+            <div id ="square" class="square2">
                   <p class="attack">I rolled 1d20+5</p>
             </div>
-            <div class="square">
+            <div id ="square" class="square3">
                   <p class="attack">A nat 20! Roll to confirm!</p>
             </div>
-            <div class="square">
+            <div id ="square" class="square4">
                   <p class="attack">Confirmed! Roll 2d8+16 points of damage!</p>
             </div>
-            <div class="squad">
+            <div id ="square" class="squad1">
                   <p class="attack">Monster Attacks!</p>
             </div>
-            <div class="squad">
+            <div id ="square" class="squad2">
                   <p class="attack">It rolls 1d20+5</p>
             </div>
-            <div class="squad">
+            <div id ="square" class="squad3">
                   <p class="attack">It rolls an 18! A hit!</p>
             </div>
-            <div class="squad">
+            <div id ="square" class="squad4">
                   <p class="attack">I take 1d10+4 points of damage!</p>
-            </div> -->
+            </div>
       </body>
 </html>
