--- a/data_binding_example.html
+++ b/data_binding_example.html
@@ -10,7 +10,8 @@
   app.controller('myController', ['$scope', function($scope){
     //printController will show the current $scope
     $scope.printController = function(){
-      console.log($scope);
+      // console.log($scope);
+      console.log($scope.printController);
     }
   }]);
   </script>
