--- a/angular_one_module.html
+++ b/angular_one_module.html
@@ -2,7 +2,8 @@
 <head>
     <script src='bower_components/angular/angular.js'/></script>
     <script type='text/javascript'>
-      var myAppModule = angular.module('myApp', []);//this is very necessary for module to take 'myApp'
+      var myAppModule = angular.module('myApp', []);
+      console.log(myAppModule);//this is very necessary for module to take 'myApp'
       // and an empty array!
     </script>
 </head>
