--- a/controller_syntax_scope.html
+++ b/controller_syntax_scope.html
@@ -3,6 +3,7 @@
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js'></script>
     <script type='text/javascript'>
        var myAppModule = angular.module('myApp', []);
+       console.log(angular.module('myApp', []));
        myAppModule.controller('studentsController', function ($scope){
         $scope.students = [
               {name: 'Mike', age: 34},
